[tool.poetry]
name = "nuke"
version = "2.5.2"
description = "Command line tool for nuking a directory 💥"
authors = ["Varun Agrawal <varagrawal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
click = ">=6.7"
crayons = ">=0.1.2"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
tox = "^3.27.0"
pypandoc = ">=1.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
