[project]
name = "nuke"
version = "2.5.3"
authors = [
  { name="Varun Agrawal", email="varagrawal@gmail.com" },
]
description = "Command line tool for nuking a directory 💥"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click >= 6.7",
  "crayons >= 0.1.2",
  "rich ~= 12.6.0"
]

[project.urls]
"Homepage" = "https://github.com/varunagrawal/nuke"
"Bug Tracker" = "https://github.com/varunagrawal/nuke/issues"

[project.scripts]
nuke = "nuke.nuke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
name = "nuke"
version = "2.5.3"
description = "Command line tool for nuking a directory 💥"
authors = ["Varun Agrawal <varagrawal@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0.0"
click = ">=6.7"
crayons = ">=0.1.2"
rich = "^12.6.0"

[tool.poetry.dev-dependencies]
tox = "^3.27.0"
pypandoc = ">=1.4"
