[project]
name = "nuke"
version = "2.6.1"
authors = [
  { name="Varun Agrawal", email="varagrawal@gmail.com" },
]
description = "Command line tool for nuking a directory 💥"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click >= 6.7",
  "crayons >= 0.1.2",
  "rich >= 12.6.0"
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/varunagrawal/nuke"
Issues = "https://github.com/varunagrawal/nuke/issues"

[project.scripts]
nuke = "nuke.nuke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyfakefs>=5.8.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pypandoc>=1.4",
    "ruff>=0.11.8",
    "poethepoet>=0.36.0",
]

[tool.pytest.ini_options]
addopts = "--verbose -vv --cov=nuke"

[tool.tox]
env_list = ["3.10","3.11","3.12","3.13"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest"]]
runner = "uv-venv-lock-runner"  # Use uv.lock

[tool.poe.tasks]
test = "pytest"
tox = "uv tool run tox -p"
package = "uv build"
_publish = "uv publish"
publish = ["package", "_publish"]